# infer-matrix

./: .gitignore  DECISIONS.md  PROGRESS.md  README.md  README_zh-CN.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.planning/ai-infra-dual-track/: agent_eval_lab_audit_20260719.md  continuation_20260719.md  d1_install_decision.md  d1_install_error.md  d1_verification_report.md  findings.md  infermatrix_audit_20260719.md  open_model_bridge.md  ownership_matrix.md  parallel_execution_contract.md  progress.md  scope_and_contract.md  streaming_p0_completion_20260719.md  streaming_p0_design_inputs_20260719.md  task_plan.md
.planning/project-feasibility-review/: findings.md  progress.md  task_plan.md
docs/: report_format.md
examples/: basic_chat.yaml  real_chat_smoke.yaml  streaming.yaml  streaming_json.yaml  tool_call_weather.yaml
src/agent_eval_lab/: __init__.py  (+4 more)
tests/: test_backend_protocol_config.py  test_case_loader.py  test_chat_completion_parser.py  test_chat_completions_protocol.py  test_chat_completions_stream_protocol.py  test_cli_reports.py  test_httpx_transport.py  test_jsonl_writer.py  test_markdown_renderer.py  test_markdown_writer.py  test_mock_client.py  test_openai_compatible_client.py  test_openai_compatible_stream_client.py  test_pipeline.py  test_real_streaming_runner.py  test_report_assembler.py  test_report_bundle.py  test_report_models.py  test_runner.py  test_schema_checker.py  test_sse_decoder.py  test_stream_parser.py  test_structured_output_parser.py  test_tool_call_checker.py  test_tool_call_parser.py
(+69 files in other folders)
