[project]
name = "agent-eval-lab"
version = "0.1.0"
description = "Evaluation infrastructure for reliable agentic LLM systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "jsonschema>=4.0.0",
    "pydantic==2.8.2",
    "typer==0.16.0",
    "pyyaml==6.0.2",
    "rich==13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.2"
]

[project.scripts]
agent-eval = "agent_eval_lab.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
